[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.poetry]
name = "асинхронность в python"
version = "0.1.0"
description = ""
authors = ["Dmitry Morozov <morozov124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
mypy = "^1.13.0"
requests = "^2.32.3"
contextvars = "^2.4"
black = "^24.10.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
